--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/SeanAvery/merkle-proof#readme",
   "devDependencies": {
     "babel-preset-env": "^1.6.0"
+  },
+  "dependencies": {
+    "ethjs-provider-http": "^0.1.6",
+    "ethjs-rpc": "^0.1.7"
   }
 }
