--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "babel-preset-env": "^1.6.0"
   },
   "dependencies": {
+    "ethereumjs-tx": "^1.3.3",
     "ethjs-provider-http": "^0.1.6",
-    "ethjs-rpc": "^0.1.7"
+    "ethjs-rpc": "^0.1.7",
+    "merkle-patricia-tree": "^2.2.0",
+    "rlp": "^2.0.0"
   }
 }
