--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.6.0"
   },
   "dependencies": {
+    "ethereumjs-block": "^1.7.0",
     "ethereumjs-tx": "^1.3.3",
     "ethjs-provider-http": "^0.1.6",
     "ethjs-rpc": "^0.1.7",
